fix overflow-x problem

--- a/src/scss/components/work-view.scss
+++ b/src/scss/components/work-view.scss
@@ -21,6 +21,7 @@
     max-width: 100%;
     position: relative;
     overflow-y: auto;
+    overflow-x: hidden;
 
     .wall {
       width: calc(100% - 2rem);
@@ -29,7 +30,7 @@
       background-color: #2c3e50;
       display: none;
       transition: .1s ease-in-out;
-      transform: scale(1.5);
+      transform: scale(1.08);
 
       &__show {
         transition: .1s ease-in-out;
